--- a/advanced_project.html
+++ b/advanced_project.html
@@ -18,7 +18,7 @@
         <div class="project-container">
             <div class="project-card">
                 <a href="acc_projects/Glitch1/Glitch1.html">
-                    <h2>Glitch 1</h2>
+                    <h2>Glitch（Final）</h2>
                 </a>
             </div>
             <div class="project-description">
@@ -30,7 +30,7 @@
         <div class="project-container">
             <div class="project-card">
                 <a href="acc_projects/Glitch2/Glitch2.html">
-                    <h2>Glitch 2</h2>
+                    <h2>Glitch 2（Sketch）</h2>
                 </a>
             </div>
             <div class="project-description">
@@ -41,7 +41,7 @@
         
             <div class="project-card">
                 <a href="acc_projects/Glitch3/Glitch3.html">
-                    <h2>Glitch 3</h2>
+                    <h2>Glitch 3（sketch）</h2>
                 </a>
             </div>
             <div class="project-description">
@@ -51,8 +51,8 @@
 
         <div class="project-container">
             <div class="project-card">
-                <a href="acc_projects/Snow1/snow1.html"> 
-                    <h2>snow 1</h2>
+                <a href="acc_projects/SnowFinal/snowFinal.html"> 
+                    <h2>snow(final)</h2>
                 </a>
             </div>
             <div class="project-description">
@@ -63,7 +63,7 @@
         <div class="project-container">
             <div class="project-card">
                 <a href="acc_projects/Snow2/snow2.html">
-                    <h2>snow 2</h2>
+                    <h2>snow 2(sketch)</h2>
                 </a>
             </div>
             <div class="project-description">
@@ -74,7 +74,7 @@
         <div class="project-container">
             <div class="project-card">
                 <a href="acc_projects/Snow3/snow3.html">
-                    <h2>snow 3</h2>
+                    <h2>snow 3(sketch)</h2>
                 </a>
             </div>
             <div class="project-description">
@@ -85,7 +85,7 @@
         <div class="project-container">
             <div class="project-card">
                 <a href="acc_projects/Echo1/echo1.html">
-                    <h2>echo 1</h2>
+                    <h2>echo(final)</h2>
                 </a>
             </div>
             <div class="project-description">
@@ -96,7 +96,7 @@
         <div class="project-container">
             <div class="project-card">
                 <a href="acc_projects/Echo2/echo2.html">
-                    <h2>echo 2</h2>
+                    <h2>echo 2(sketch)</h2>
                 </a>
             </div>
             <div class="project-description">
@@ -107,7 +107,7 @@
         <div class="project-container">
             <div class="project-card">
                 <a href="acc_projects/Echo3/echo3.html">
-                    <h2>echo 3</h2>
+                    <h2>echo 3(sketch)</h2>
                 </a>
             </div>
             <div class="project-description">
