--- a/acc_projects/Echo1/echo1.html
+++ b/acc_projects/Echo1/echo1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glitch 1</title>
+    <title>Echo</title>
     <link rel="stylesheet" href="../../styles/style.css">
     <script src="../../script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
