--- a/advanced_project.html
+++ b/advanced_project.html
@@ -113,6 +113,16 @@
             <div class="project-description">
                 
             </div>
+            <div class="project-container">
+                <div class="project-card">
+                    <a href="acc_projects/Handpost_Camera/camera.html">
+                        <h2>Handpose drawing Camera</h2>
+                    </a>
+                </div>
+                <div class="project-description">
+                    
+                </div>
+            </div>
         </div>
     </main>
 
