Update experimental camera project with latest changes

--- a/acc_projects/Handpost_Camera/camera.html
+++ b/acc_projects/Handpost_Camera/camera.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Handpose Drawing</title>
- 
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/ml5@0.6.0/dist/ml5.min.js"></script>
-</head>
-<body>
-  
+  <meta charset="utf-8" />
+  <title>PoseNet Example</title>
+  <!-- 先加载 p5.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.dom.min.js"></script>
+  <!-- 再加载 ml5.js (最新版本) -->
+  <script src="https://cdn.jsdelivr.net/npm/ml5@0.12.2/dist/ml5.min.js"></script>
+  <!-- 最后加载你的脚本 -->
   <script src="camera.js"></script>
-</body>
+  
+</head>
+<body></body>
 </html>
