--- a/advanced_project.html
+++ b/advanced_project.html
@@ -136,6 +136,17 @@
                     
             </div>
         </div>
+
+         <div class="project-container">
+            <div class="project-card">
+                <a href="acc_projects/Cosmic_Takeout/index.html">
+                    <h2>Cosmic Takeout</h2>
+                </a>
+            </div>
+            <div class="project-description">
+                    
+            </div>
+        </div>
     </main>
 
     <footer>
